--- a/home.html
+++ b/home.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
-
     <header class="menu">
         <nav class="nav-bar">
             <i class="fa-solid fa-burger">food</i>
@@ -26,6 +25,9 @@
                     <a href="rodape" class="nav-link">RODAPE</a>
                 </li>
             </ul>
+            <button class="btn-padrao">
+                Peça Aqui
+            </button>
         </nav>
     </header>
     <section class="slider">
@@ -41,7 +43,7 @@
         <section id="depoimentos">
 
         </section>
-        section
+        
     </main>
     <footer id="rodape">
 
