--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <body>
     <header class="menu">
         <nav class="nav-bar">
-            <i class="fa-solid fa-burger">food</i>
+            <i class="fa-solid fa-burger nav-logo">food</i>
             <ul class="nav-list">
                 <li class="nav-item">
                     <a href="#home" class="nav-link">HOME</a>
@@ -35,7 +35,41 @@
     </section>
     <main class="content">
         <section id="home">
-
+            <div class="shape"></div>
+            <div class="cta">
+                <h1 class="title">
+                    O sabor que vai até
+                    <span>você</span>
+                </h1>
+                <p class="descricacao">
+                    Descubra o sabor irresistível dos nossos lanches artesanais, preparados com ingredientes frescos e de alta qualidade. Sua satisfação é nossa prioridade!
+                </p>
+                <div class="cta-buttons">
+                    <a href="#cardapio" class="btn-padrao">
+                        Ver Cardápio
+                    </a>
+                    <a href="" id="phone_btn">
+                        <button class="btn-padrao">
+                            <i class="fa-solid fa-phone"></i>
+                        </button>
+                        (67)98169-7437
+                    </a>
+                </div>
+                <div class="social-media-buttons">
+                    <a href="https://web.whatsapp.com/" target="_blank">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/lara-eridan-genes-santiago/" target="_blank">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="banner">
+                <img src="../pngwing.com.png" alt="">
+            </div>
         </section>
         <section id="cardapio">
 
