--- a/home.html
+++ b/home.html
@@ -34,7 +34,9 @@
 
     </section>
     <main class="content">
-        <section id="home">
+        <section id="home">  
+            <!-- id a  gente chama obrigatoriamente com # -->
+            <!-- comentario se faz com (Ctrl + ;) -->
             <div class="shape"></div>
             <div class="cta">
                 <h1 class="title">
@@ -77,7 +79,40 @@
         <section id="depoimentos">
 
         </section>
-        
+        <section id="cardapio">
+            <h2 class="section-title">Cardápio</h2>
+            <h3 class="section-subtitle">Nossos pratos especiais.</h3>
+
+            <div class="area-cards">
+                <div class="card">
+                    <div class="card-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <img src="../pngwing.com (1).png" alt="" class="card-image">
+                    <h3 class="card-title">BURRITO 143</h3>
+                    <span class="card-descricao">
+                        Descubra o sabor explosivo do nosso burrito, uma festa de sabores em cada mordida!
+                    </span>
+                    <div class="card-rate">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i> 
+                        <!-- ALT + SHIFT faz copiar varios de uma vez -->
+                        <span>(+500)</span>
+                    </div>
+                    <div class="card-price">
+                        <h4>R$20,00</h4>
+                        <button class="btn-padrao">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
     </main>
     <footer id="rodape">
 
