--- a/home.html
+++ b/home.html
@@ -70,15 +70,10 @@
                 </div>
             </div>
             <div class="banner">
-                <img src="../pngwing.com.png" alt="">
+                <img src="Imagens/pngwing.com.png" alt="">
             </div>
         </section>
-        <section id="cardapio">
 
-        </section>
-        <section id="depoimentos">
-
-        </section>
         <section id="cardapio">
             <h2 class="section-title">Cardápio</h2>
             <h3 class="section-subtitle">Nossos pratos especiais.</h3>
@@ -88,17 +83,17 @@
                     <div class="card-heart">
                         <i class="fa-solid fa-heart"></i>
                     </div>
-                    <img src="../pngwing.com (1).png" alt="" class="card-image">
+                    <img src="Imagens/pngwing.com (1).png" alt="" class="card-image">
                     <h3 class="card-title">BURRITO 143</h3>
                     <span class="card-descricao">
                         Descubra o sabor explosivo do nosso burrito, uma festa de sabores em cada mordida!
                     </span>
                     <div class="card-rate">
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i> 
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i> 
                         <!-- ALT + SHIFT faz copiar varios de uma vez -->
                         <span>(+500)</span>
                     </div>
@@ -109,6 +104,262 @@
                         </button>
                     </div>
 
+                </div>
+                <div class="card">
+                    <div class="card-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <img src="Imagens/burguer.png" alt="" class="card-image">
+                    <h3 class="card-title">BURGÃO 143</h3>
+                    <span class="card-descricao">
+                        Descubra o sabor explosivo do nosso delicioso lanche, uma festa de sabores em cada mordida!
+                    </span>
+                    <div class="card-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i> 
+                        <!-- ALT + SHIFT faz copiar varios de uma vez -->
+                        <span>(+500)</span>
+                    </div>
+                    <div class="card-price">
+                        <h4>R$20,00</h4>
+                        <button class="btn-padrao">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+
+                </div>
+                <div class="card">
+                    <div class="card-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <img src="Imagens/salada.png" alt="" class="card-image">
+                    <h3 class="card-title">SALADA 143</h3>
+                    <span class="card-descricao">
+                        Descubra o sabor delicado e refrescante da nossa salada, uma festa de sabores em cada garfada!
+                    </span>
+                    <div class="card-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i> 
+                        <!-- ALT + SHIFT faz copiar varios de uma vez -->
+                        <span>(+500)</span>
+                    </div>
+                    <div class="card-price">
+                        <h4>R$20,00</h4>
+                        <button class="btn-padrao">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+
+                </div>
+                <div class="card">
+                    <div class="card-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <img src="Imagens/burguer.png" alt="" class="card-image">
+                    <h3 class="card-title">BURGÃO 143</h3>
+                    <span class="card-descricao">
+                        Descubra o sabor explosivo do nosso delicioso lanche, uma festa de sabores em cada mordida!
+                    </span>
+                    <div class="card-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i> 
+                        <!-- ALT + SHIFT faz copiar varios de uma vez -->
+                        <span>(+500)</span>
+                    </div>
+                    <div class="card-price">
+                        <h4>R$20,00</h4>
+                        <button class="btn-padrao">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+
+                </div>
+                <div class="card">
+                    <div class="card-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <img src="Imagens/burguer.png" alt="" class="card-image">
+                    <h3 class="card-title">BURGÃO 143</h3>
+                    <span class="card-descricao">
+                        Descubra o sabor explosivo do nosso delicioso lanche, uma festa de sabores em cada mordida!
+                    </span>
+                    <div class="card-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i> 
+                        <!-- ALT + SHIFT faz copiar varios de uma vez -->
+                        <span>(+500)</span>
+                    </div>
+                    <div class="card-price">
+                        <h4>R$20,00</h4>
+                        <button class="btn-padrao">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+
+                </div>
+                <div class="card">
+                    <div class="card-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <img src="Imagens/burguer.png" alt="" class="card-image">
+                    <h3 class="card-title">BURGÃO 143</h3>
+                    <span class="card-descricao">
+                        Descubra o sabor explosivo do nosso delicioso lanche, uma festa de sabores em cada mordida!
+                    </span>
+                    <div class="card-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i> 
+                        <!-- ALT + SHIFT faz copiar varios de uma vez -->
+                        <span>(+500)</span>
+                    </div>
+                    <div class="card-price">
+                        <h4>R$20,00</h4>
+                        <button class="btn-padrao">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+
+                </div>
+                <div class="card">
+                    <div class="card-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <img src="Imagens/burguer.png" alt="" class="card-image">
+                    <h3 class="card-title">BURGÃO 143</h3>
+                    <span class="card-descricao">
+                        Descubra o sabor explosivo do nosso delicioso lanche, uma festa de sabores em cada mordida!
+                    </span>
+                    <div class="card-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i> 
+                        <!-- ALT + SHIFT faz copiar varios de uma vez -->
+                        <span>(+500)</span>
+                    </div>
+                    <div class="card-price">
+                        <h4>R$20,00</h4>
+                        <button class="btn-padrao">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+
+                </div>
+                <div class="card">
+                    <div class="card-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <img src="Imagens/burguer.png" alt="" class="card-image">
+                    <h3 class="card-title">BURGÃO 143</h3>
+                    <span class="card-descricao">
+                        Descubra o sabor explosivo do nosso delicioso lanche, uma festa de sabores em cada mordida!
+                    </span>
+                    <div class="card-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i> 
+                        <!-- ALT + SHIFT faz copiar varios de uma vez -->
+                        <span>(+500)</span>
+                    </div>
+                    <div class="card-price">
+                        <h4>R$20,00</h4>
+                        <button class="btn-padrao">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+
+                </div>
+                <div class="card">
+                    <div class="card-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <img src="Imagens/burguer.png" alt="" class="card-image">
+                    <h3 class="card-title">BURGÃO 143</h3>
+                    <span class="card-descricao">
+                        Descubra o sabor explosivo do nosso delicioso lanche, uma festa de sabores em cada mordida!
+                    </span>
+                    <div class="card-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i> 
+                        <!-- ALT + SHIFT faz copiar varios de uma vez -->
+                        <span>(+500)</span>
+                    </div>
+                    <div class="card-price">
+                        <h4>R$20,00</h4>
+                        <button class="btn-padrao">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+        <section id="depoimentos">
+            <img src="Imagens/chefe.png" alt="" class="img-chefe">
+            <div class="depoimentos-content">
+                <h2 class="section-title">DEPOIMENTOS</h2>
+                <h3 class="section-subtitle">
+                    O que os clientes falam sobre nós.
+                </h3>
+                <div class="area-feedbacks">
+                    <div class="feedback">
+                        <img src="Imagens/woman-face-clipart-design-illustration-free-png.webp" alt="" class="feedAvatar">
+                        <div class="feedback-content">
+                            <p>
+                                Maria Cristina
+                                <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </span>
+                            </p>
+                            <p>
+                                Este lanche estava simplesmente delicioso, cada mordida é uma explosão de sabores incríveis!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="feedback">
+                        <img src="Imagens/woman-face-expression-clipart-design-illustration-free-png.webp" alt="" class="feedAvatar">
+                        <div class="feedback-content">
+                            <p>
+                                Carmem Marina
+                                <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </span>
+                            </p>
+                            <p>
+                                Esses burritos são simplesmente espetaculares, cada mordida é uma explosão de sabores autênticos e irresistíveis!
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
 
