--- a/home.html
+++ b/home.html
@@ -6,13 +6,15 @@
     <title>Lanchonete Voucher</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="Styles/style.css">
+    <script src="js/menu.js" defer></script> 
+    <!-- o defer faz com que o javascript nao execute ao mesmo tempo que o html, e sim, depois -->
 </head>
 <body>
     <header class="menu">
         <nav class="nav-bar">
             <i class="fa-solid fa-burger nav-logo">food</i>
             <ul class="nav-list">
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a href="#home" class="nav-link">HOME</a>
                 </li>
                 <li class="nav-item">
@@ -29,6 +31,20 @@
                 Peça Aqui
             </button>
         </nav>
+        <button class="mobile_btn">
+            <i class="fa-solid fa-bars"></i>
+        </button>
+        <div class="mobile_menu">
+            <ul class="mobile_nav_list">
+                <li class="nav-item"><a href="#home"></a>HOME</li>
+                <li class="nav-item"><a href="#cardapio"></a>CARDÁPIO</li>
+                <li class="nav-item"><a href="#depoimentos"></a>DEPOIMENTOS</li>
+                <li class="nav-item"><a href="#rodape"></a>FOOTER</li>
+            </ul>
+            <button class="btn-padrao">
+                Peça Aqui
+            </button>
+        </div>
     </header>
     <section class="slider">
 
