--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <title>Lanchonete Voucher</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="Styles/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/menu.js" defer></script> 
     <!-- o defer faz com que o javascript nao execute ao mesmo tempo que o html, e sim, depois -->
 </head>
@@ -36,10 +37,10 @@
         </button>
         <div class="mobile_menu">
             <ul class="mobile_nav_list">
-                <li class="nav-item"><a href="#home"></a>HOME</li>
-                <li class="nav-item"><a href="#cardapio"></a>CARDÁPIO</li>
-                <li class="nav-item"><a href="#depoimentos"></a>DEPOIMENTOS</li>
-                <li class="nav-item"><a href="#rodape"></a>FOOTER</li>
+                <li class="nav-item"><a href="#home">HOME</a></li>
+                <li class="nav-item"><a href="#cardapio">CARDÁPIO</a></li>
+                <li class="nav-item"><a href="#depoimentos">DEPOIMENTOS</a></li>
+                <li class="nav-item"><a href="#rodape">FOOTER</a></li>
             </ul>
             <button class="btn-padrao">
                 Peça Aqui
